# daiichi

./: README.md
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  Dockerfile.local  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2dfbec955c77_create_histories_table.py  34da144647d5_add_relation_with_history_and_user.py  3e69a098f3b2_create_users_table.py  b3249968138d_fix_users_table.py  c22e992ebdf8_update_users_table.py
backend/app/: main.py
backend/app/db/: db.py
backend/app/db/models/: __init__.py  history.py  user.py
backend/app/db/schema/: auth.py  user.py
backend/app/middleware/: auth_middleware.py
backend/app/repositories/: user_repository.py
backend/app/routers/: auth.py  hello.py  rag.py  user.py
backend/app/services/: auth_service.py
backend/app/usecases/: auth_usecase.py  user_usecase.py
frontend/: next.config.js  openapi.json  package-lock.json  package.json  tailwind.config.ts
frontend/api-client/: index.ts
frontend/api-client/models/: LoginRequest.ts  LoginResponse.ts  UserCreate.ts  UserInfo.ts
frontend/api-client/services/: AuthService.ts  DefaultService.ts  UserService.ts
frontend/app/: globals.css
frontend/app/(auth)/: layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/components/: pdf-viewer.tsx  reports-tab.tsx
frontend/components/data-table/: columns.tsx  data-table.tsx  editable-cell.tsx  enhanced-columns.tsx  enhanced-data-table.tsx  export-dialog.tsx  import-dialog.tsx  resizable-header.tsx  save-dialog.tsx  sortable-header.tsx
frontend/components/history/: chat-history-card.tsx  history-item-card.tsx
frontend/components/layout/: header.tsx  sidebar.tsx
frontend/components/ui/: import-export-buttons.tsx
frontend/fetch/: auth.ts  user.ts
frontend/hooks/: use-toast.ts
frontend/lib/: excel-utils.ts  mock-data.ts  report-utils.ts  risk-calculations.ts
frontend/types/: risk-assessment.ts
terraform/: .gitignore  README.md  main.tf
terraform/environments/develop/: main.tf  outputs.tf  terraform.tf
terraform/environments/production/: main.tf  outputs.tf  provider.tf  terraform.tf
terraform/modules/acr/: main.tf  outputs.tf  variables.tf
terraform/modules/app_service/: main.tf  outputs.tf  (+1 more)
(+14 files in other folders)
